Generating snake names (#162)
* Add name generator

* Fix name generator test

* Use snake names

* Simplify stream to list collection

* Update server dependencies

* Display player name in bottom left corner

* Minor JavaDoc improvements

* Get name data from leaderboard

* Fix minor TODO

* Send spawn position to client

* Send name updates to clients

* Bump version & update dependencies

* Update client dependencies

* Update package-lock.json

* Minor improvements

* Move test

* Re-add missing test

Co-authored-by: Tim Weißenfels <tim-we@users.noreply.github.com>