@@ -7,6 +7,7 @@ import game.ai.StupidBot;
 import game.snake.Snake;
 import game.snake.SnakeChunk;
 import game.snake.SnakeFactory;
+import game.snake.SnakeNameGenerator;
 import game.world.Collidable;
 import game.world.World;
 import game.world.WorldChunk;
@@ -18,16 +19,12 @@ import server.protocol.SpawnInfo;
 import util.ExceptionalExecutorService;
 
 import javax.websocket.Session;
-import java.util.HashMap;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Consumer;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static util.TaskMeasurer.measure;
@@ -44,6 +41,7 @@ public class Game {
     private final Map<String, Client> clients = new HashMap<>(64);
     private final List<Bot> bots = new LinkedList<>();
     private byte ticksSinceLastUpdate = 0;
+    private final Set<String> usedNames = new HashSet<>();
 
     public Game() {
         this(new GameConfig());
@@ -77,8 +75,7 @@ public class Game {
     }
 
     private void onCollision(Snake snake, Collidable object) {
-        if (object instanceof SnakeChunk) {
-            final var snakeChunk = (SnakeChunk) object;
+        if (object instanceof final SnakeChunk snakeChunk) {
             final var otherSnake = snakeChunk.getSnake();
             System.out.println(snake + " collided with " + otherSnake + ".");
             snake.kill();
@@ -95,8 +92,15 @@ public class Game {
         final var spawnPos = world.findSpawnPosition();
 
         return CompletableFuture.supplyAsync(() -> {
-            final var snake = SnakeFactory.createSnake(spawnPos, world);
+            final String name;
+            synchronized (usedNames) {
+                name = SnakeNameGenerator.generateUnique(usedNames);
+                usedNames.add(name);
+            }
+
+            final var snake = SnakeFactory.createSnake(spawnPos, world, name);
             snakes.add(snake);
+
             return snake;
         }, executor).thenApply(snake -> {
             final var player = new Player(snake, session);
@@ -104,6 +108,7 @@ public class Game {
                 clients.put(session.getId(), player);
             }
             player.sendSync(gson.toJson(new SpawnInfo(config, snake)));
+            System.out.println("Player " + player.getName() + " has joined game");
             return player;
         });
     }
@@ -144,6 +149,12 @@ public class Game {
 
         // garbage-collection every second
         executor.scheduleAtFixedRate(() -> {
+            synchronized (usedNames) {
+                snakes.stream()
+                        .filter(Predicate.not(Snake::isAlive))
+                        .map(s -> s.name)
+                        .forEach(usedNames::remove);
+            }
             snakes.removeIf(Predicate.not(Snake::isAlive));
             world.chunks.forEach(WorldChunk::removeOldSnakeChunks);
             bots.removeIf(Predicate.not(Bot::isAlive));
@@ -151,9 +162,13 @@ public class Game {
 
         // update leaderboard every second
         executor.scheduleAtFixedRate(() -> {
-            final var topTenJson = gson.toJson(new Leaderboard(this, 10));
+            final var topTenJson = gson.toJson(new Leaderboard(this));
             clients.forEach((__, client) -> client.send(topTenJson));
-        }, 1, 1, TimeUnit.SECONDS);
+        }, 1, 2, TimeUnit.SECONDS);
+
+        executor.scheduleAtFixedRate(() -> {
+            clients.forEach((__, client) -> client.sendNameUpdate());
+        }, 420, 1500, TimeUnit.MILLISECONDS);
 
         // spawn bots every 20 seconds
         executor.scheduleAtFixedRate(() -> {
@@ -165,6 +180,7 @@ public class Game {
         }, 1, 16, TimeUnit.SECONDS);
 
         System.out.println("Game started. Config:\n" + prettyGson.toJson(config));
+        System.out.println("Waiting for players to connect...");
     }
 
     /**
@@ -195,7 +211,7 @@ public class Game {
                 worldChunks.stream().flatMap(WorldChunk::streamSnakeChunks).forEach(client::updateClientSnakeChunk);
                 worldChunks.forEach(client::updateClientFoodChunk);
                 client.updateHeatMap(world.getHeatMap());
-                client.sendUpdate(ticksSinceLastUpdate);
+                client.sendGameUpdate(ticksSinceLastUpdate);
                 client.cleanupKnowledge();
             });
         }
@@ -210,7 +226,7 @@ public class Game {
 
             final var collectedFood = worldChunk.streamFood()
                     .filter(food -> food.isWithinRange(headPosition, foodCollectRadius))
-                    .collect(Collectors.toList());
+                    .toList();
 
             if (collectedFood.isEmpty()) {
                 return;
