@@ -10,7 +10,6 @@ import math.Vector;
 
 import java.util.Comparator;
 import java.util.Random;
-import java.util.stream.Collectors;
 
 public class World {
     private static final int FOOD_THRESHOLD = 16;
@@ -48,7 +47,7 @@ public class World {
         assert (chunks.numberOfChunks() > 0);
         var minimalSnakeChunkCount = chunks.stream().mapToInt(WorldChunk::getSnakeChunkCount).min().orElseThrow();
         var worldChunksWithMinimalSnakeChunkCount = chunks.stream()
-                .filter(worldChunk -> worldChunk.getSnakeChunkCount() == minimalSnakeChunkCount).collect(Collectors.toList());
+                .filter(worldChunk -> worldChunk.getSnakeChunkCount() == minimalSnakeChunkCount).toList();
         int randomIndex = World.random.nextInt(worldChunksWithMinimalSnakeChunkCount.size());
         return worldChunksWithMinimalSnakeChunkCount.get(randomIndex);
     }
